Fix alignment of users in module build history table

--- a/BlazarUI/app/stylus/components/branch-state/module-build-history.styl
+++ b/BlazarUI/app/stylus/components/branch-state/module-build-history.styl
@@ -44,7 +44,9 @@
   right 30px
 
 .module-build-history-item__commit-info
-  margin-right 6px
+  margin 5px
+  width 20px
+  text-align center
 
 .module-build-history-item--clickable
   cursor pointer
